@@ -31,7 +31,7 @@ class OsgiContextTest {
 
     @Test
     void testSimpleService(OsgiContext context) {
-        context.registerService(Integer.class, new Integer(5));
+        context.registerService(Integer.class, Integer.valueOf(5));
 
         Integer service = context.getService(Integer.class);
         assertEquals((Integer)5, service);
